--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
      <!----------------------------------------------------FOOTHER------------------------------------------------------------------------------>
 
     <footer class="footer">
-      <div class="container tst">
+      <div class="tst container">
        <a href="./index.html" class="header-link link footer-link ">Web<span class="footer-studio link">Studio</span></a>
        <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
