--- a/portfolio.html
+++ b/portfolio.html
@@ -135,11 +135,13 @@
   <!----------------------------------------------------FOOTHER------------------------------------------------------------------->
       
   <footer class="footer">
-    <a href="./index.html" class="header-link link">Web<span class="footer-studio link">Studio</span></a>
-    <p class="footer-text">
+    <div class="tst container">
+     <a href="./index.html" class="header-link link footer-link ">Web<span class="footer-studio link">Studio</span></a>
+     <p class="footer-text">
       Increase the flow of customers and sales for your business with digital
       marketing & growth solutions.
-    </p>
+     </p>
+    </div>
   </footer>
 </body>
 </html>
