--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-----------------------------------------------------ADDRESS----------------------------------------------------------------------->
       <address class="socials">
         <ul class="socials-list list">
-          <li class="socials-contacts"><a href="mailto:info@devstudio.com" class="socials-address link">info@devstudio.com</a></li>
+          <li class="socials-contacts socials-mailto"><a href="mailto:info@devstudio.com" class="socials-address link">info@devstudio.com</a></li>
           <li class="socials-contacts"><a href="tel:+110001111111" class="socials-address link">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
@@ -56,21 +56,21 @@
               perfect and creative solution.
             </p>
           </li>
-          <li>
+          <li class="container-section">
             <h3 class="aside-content">Punctuality</h3>
             <p class="aside-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
+          <li class="container-section">
             <h3 class="aside-content">Diligence</h3>
             <p class="aside-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
+          <li class="container-section">
             <h3 class="aside-content">Technologies</h3>
             <p class="aside-text">
               Design practice focused on digital experiences. We bring forth a
