--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     <!-----------------------------------------------------ADDRESS----------------------------------------------------------------------->
     <address class="socials">
       <ul class="socials-list list">
-        <li class="socials-contacts"><a href="mailto:info@devstudio.com" class="socials-address link">info@devstudio.com</a></li>
+        <li class="socials-contacts socials-mailto"><a href="mailto:info@devstudio.com" class="socials-address link">info@devstudio.com</a></li>
         <li class="socials-contacts"><a href="tel:+110001111111" class="socials-address link">+11 (000) 111-11-11</a></li>
       </ul>
     </address>
